Fixed alignment problem in scorecard score column.

--- a/src/GolfBag/wwwroot/css/site.less
+++ b/src/GolfBag/wwwroot/css/site.less
@@ -116,11 +116,10 @@ li {
             Score Colors
 *****************************/
 
-.table > tbody > tr.hole-score {
+.table > tbody > tr >td.hole-score {
     font-family: @scorecardNumberFont;
     text-align: center;
-    vertical-align: middle;
-    padding: 0;
+    vertical-align: baseline;
 }
 
 .bogie-box {
